move the think video to be below the table

--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
             <h1 class="title is-1 publication-title">Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-                    <a href="https://xqlin98.github.io/" target="_blank">Xiaoqiang Lin*</a>
+                    <a href="https://xqlin98.github.io/" target="_blank">Xiaoqiang Lin*</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://zhaoxuanwu.github.io/" target="_blank">Zhaoxuan Wu*</a>
+                    <a href="https://zhaoxuanwu.github.io/" target="_blank">Zhaoxuan Wu*</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://daizhongxiang.github.io/" target="_blank">Zhongxiang Dai</a>
+                    <a href="https://daizhongxiang.github.io/" target="_blank">Zhongxiang Dai</a>,
                   </span>
                   <span class="author-block">
-                    <a href="Wenyang Hu PERSONAL LINK" target="_blank">Wenyang Hu</a>
+                    <a href="Wenyang Hu PERSONAL LINK" target="_blank">Wenyang Hu</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://shuyao95.github.io/" target="_blank">Yao Shu</a>
+                    <a href="https://shuyao95.github.io/" target="_blank">Yao Shu</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://www.comp.nus.edu.sg/~ngsk/" target="_blank">See-Kiong Ng</a>
+                    <a href="https://www.comp.nus.edu.sg/~ngsk/" target="_blank">See-Kiong Ng</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://web.mit.edu/jaillet/www/" target="_blank">Patrick Jaillet</a>
+                    <a href="https://web.mit.edu/jaillet/www/" target="_blank">Patrick Jaillet</a>,
                   </span>
                   <span class="author-block">
                     <a href="https://www.comp.nus.edu.sg/~lowkh/research.html" target="_blank">Bryan Kian Hsiang Low</a>
@@ -128,13 +128,13 @@
 
 
 <!-- Teaser video-->
-<section class="hero teaser">
+<!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/kBGbnMl1EwI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
@@ -225,9 +225,8 @@
       Our approach significantly outperforms APE and InstructZero on the task of instruction induction.
       </p>
     </div>
-    <div class="column is-four-fifths">
-
-      <div class="column is-four-fifths">
+    <div class="column is-four-fifths is-centered">
+      <div class="column is-centered">
         <div class="item">
           <div class="max-width-1">
             <h2 class="subtitle has-text-centered"></h2>Figure 1: Improvement of our INSTINCT over baselines (in 30 tasks).</h2></br>
@@ -235,7 +234,7 @@
           </div>
         </div>
       </div>
-      <div class="column is-four-fifths">
+      <div class="column is-centered">
         <div class="item">
           <div class="max-width-5">
             <h2 class="subtitle has-text-centered"></h2>Table 1: Average test accuracy achieved by (i) APE, (ii) InstructZero and (iii) INSTINCT.</h2></br>
@@ -243,7 +242,6 @@
           </div>
         </div>
       </div>
-
   </div>
 </div>
 
@@ -292,11 +290,20 @@
         </p>
       </div>
       <div class="column is-three-fifths">
-        <div class="item">
-          <div class="max-width-3">
-            <h2 class="subtitle has-text-centered"></h2>Table 3: The best zero-shot CoT instructions found by different algorithms and their scores.          </h2></br>
-            <img src="static/images/cot.png" alt="Image 1" class="max-width-3">
+        <div class="column is-three-fifths">
+          <div class="item">
+            <div class="max-width-3">
+              <h2 class="subtitle has-text-centered"></h2>Table 3: The best zero-shot CoT instructions found by different algorithms and their scores.          </h2></br>
+              <img src="static/images/cot.png" alt="Image 1" class="max-width-3">
+            </div>
           </div>
+        </div>
+        <div class="column is-three-fifths">
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/kBGbnMl1EwI" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
         </div>
       </div>
     </div>
