--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                   </span>
                   </div>
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">National University of Singapore</span>
+                    <span class="author-block">National University of Singapore (NUS)</span><br>
+                    <span class="author-block">Tencent</span><br>
+                    <span class="author-block">Massachusetts Institute of Technology (MIT)</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
                   </div>
                   <div class="column has-text-centered">
@@ -158,7 +160,7 @@
 <section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column" style="padding-bottom: 18px;">
         <h2 class="title is-3"><font color="#1155cc">How to use your INSTINCT?</font></h2>
       </div>
     </div>
@@ -230,10 +232,10 @@
 
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column">
         <h2 class="title is-3"><font color="#1155cc">Instruction induction</font></h2>
         <p>
-          Our approach significantly outperforms APE and InstructZero on the task of instruction induction.
+          Our approach significantly outperforms APE and InstructZero in a variety of instruction induction tasks.
         </p>
       </div>
     </div>
@@ -272,7 +274,7 @@
           <div class="content">
             <h3 class="title is-3"><font color="#1155cc">Improving instruction for summarization tasks</font></h3>
             <p>
-              We demonstrate the capability of our INSTINCT for instruction optimization across a variety of tasks.
+              We demonstrate the capability of our INSTINCT in instruction optimization for the task of text summarization.
             </p>
           </div>
         </div>
@@ -297,9 +299,9 @@
     <div class="columns is-centered">
       <div class="column is-two-fifths">
         <div class="content">
-          <h3 class="title is-3"><font color="#1155cc">Improving chain-of-thought prompts</font></h3>
+          <h3 class="title is-3"><font color="#1155cc">Improving zero-shot chain-of-thought prompts</font></h3>
           <p>
-            We improve COT prompts on multiple arithmetic reasoning tasks.
+            We improve zero-shot CoT prompts on multiple arithmetic reasoning tasks.
           </p>
         </div>
       </div>
@@ -308,7 +310,7 @@
         <div class="column">
           <div class="content">
             <h2 class="subtitle has-text-centered"></h2>Table 3: The best zero-shot CoT instructions found by different algorithms and their scores.</h2>
-            <img src="static/images/cot.png" alt="COT Table">
+            <img src="static/images/cot.png" alt="CoT Table">
             <iframe align="middle" src="https://www.youtube.com/embed/kBGbnMl1EwI" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
@@ -350,7 +352,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title has-text-centered"><font color="#1155cc">BibTeX</font></h2>
       <pre><code>@article{lin2023use,
-        title={Use Your INSTINCT: Instruction Optimization Using Neural Bandits Coupled with Transformers}, 
+        title={Use Your {INSTINCT}: INSTruction optimization usIng Neural bandits Coupled with Transformers},
         author={Xiaoqiang Lin and Zhaoxuan Wu and Zhongxiang Dai and Wenyang Hu and Yao Shu and See-Kiong Ng and Patrick Jaillet and Bryan Kian Hsiang Low},
         year={2023},
         eprint={2310.02905},
