--- a/index.html
+++ b/index.html
@@ -311,9 +311,7 @@
           <div class="content">
             <h2 class="subtitle has-text-centered"></h2>Table 3: The best zero-shot CoT instructions found by different algorithms and their scores.</h2>
             <img src="static/images/cot.png" alt="CoT Table">
-            <iframe align="middle" src="https://www.youtube.com/embed/kBGbnMl1EwI" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            <img src="static/images/smart.webp" alt="brain">
           </div>
         </div>
       </div>
