--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers"/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/images/banner.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
