update twitter image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:title" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers">
   <meta name="twitter:description" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
+  <meta name="twitter:image" content="static/images/banner.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="Instruction optimization">
