update the accepted paper

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <span class="author-block">Tencent</span><br>
                     <span class="author-block">Massachusetts Institute of Technology (MIT)</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
+                    <span class="conference-name"><br><sup>Accepted by ICML 2024, also presented at NeurIPS 2023, Workshop on Instruction Tuning and Instruction Following</span>
                   </div>
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -349,13 +350,11 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title has-text-centered"><font color="#1155cc">BibTeX</font></h2>
-      <pre><code>@article{lin2023use,
+      <pre><code>@inproceedings{lin2023use,
         title={Use Your {INSTINCT}: INSTruction optimization usIng Neural bandits Coupled with Transformers},
         author={Xiaoqiang Lin and Zhaoxuan Wu and Zhongxiang Dai and Wenyang Hu and Yao Shu and See-Kiong Ng and Patrick Jaillet and Bryan Kian Hsiang Low},
-        year={2023},
-        eprint={2310.02905},
-        archivePrefix={arXiv},
-        primaryClass={cs.LG}
+        year={2024},
+        booktitle={Proc. ICML}
 }</code></pre>
     </div>
 </section>
