--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers"/>
-  <meta property="og:description" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers"/>
+  <meta property="og:title" content="Use Your INSTINCT: INSTruction optimization for LLMs usIng Neural bandits Coupled with Transformers"/>
+  <meta property="og:description" content="Use Your INSTINCT: INSTruction optimization for LLMs usIng Neural bandits Coupled with Transformers"/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/images/banner.png" />
@@ -14,8 +14,8 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers">
-  <meta name="twitter:description" content="Use Your INSTINCT: INSTruction optimization usIng Neural bandits Coupled with Transformers">
+  <meta name="twitter:title" content="Use Your INSTINCT: INSTruction optimization for LLMs usIng Neural bandits Coupled with Transformers">
+  <meta name="twitter:description" content="Use Your INSTINCT: INSTruction optimization for LLMs usIng Neural bandits Coupled with Transformers">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/banner.png">
   <meta name="twitter:card" content="summary_large_image">
@@ -351,7 +351,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title has-text-centered"><font color="#1155cc">BibTeX</font></h2>
       <pre><code>@inproceedings{lin2023use,
-        title={Use Your {INSTINCT}: INSTruction optimization usIng Neural bandits Coupled with Transformers},
+        title={Use Your {INSTINCT}: INSTruction optimization for LLMs usIng Neural bandits Coupled with Transformers},
         author={Xiaoqiang Lin and Zhaoxuan Wu and Zhongxiang Dai and Wenyang Hu and Yao Shu and See-Kiong Ng and Patrick Jaillet and Bryan Kian Hsiang Low},
         year={2024},
         booktitle={Proc. ICML}
